fixed 2 issues. 1. Footer links visibility 2. Navigation item alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ nav ul {
 }
 
 nav ul li {
-  margin: 0 10px;
+  margin: 0;
 }
 
 nav ul li a {
@@ -276,6 +276,12 @@ footer {
 .copyright {
   font-size: 14px;
   color: white;
+}
+
+/* Force footer links to be white regardless of inheritance */
+footer a {
+  color: white;
+  text-decoration: underline;
 }
 
 /* Utility classes */
